Add tests for delta register_table procedure